--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,14 @@ djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 idna==2.10
 importlib-metadata==1.7.0
+kavenegar==1.1.2
 kombu==4.6.11
 Markdown==3.2.2
 Pillow==7.2.0
 polib==1.1.0
 psycopg2-binary==2.8.5
 PyJWT==1.7.1
+python-memcached==1.59
 pytz==2020.1
 redis==3.5.3
 requests==2.24.0
